--- a/animated Login.css
+++ b/animated Login.css
@@ -1,3 +1,6 @@
+:root{
+    --primary-color:rgb(86, 86, 214);
+}
 *{
     margin: 0;
     padding: 0;
@@ -29,7 +32,7 @@ body{
 }
 .div1{
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #ffffff;
     left: 0;
     display: flex;
     flex-direction: column;
@@ -37,7 +40,8 @@ body{
     justify-content: center;
 }
 .div1 h1{
-    font-size: 50px;
+    color: var(--primary-color);
+    font-size:2.8rem;
     margin: 25px auto;
 }
 .div1 .inputBox{
@@ -58,31 +62,36 @@ body{
     border-radius: 5px;
     outline: none;
     border: none;
-    background-color: rgb(203, 199, 199);
-    font-size: 25px;
-    padding: 15px 35px;
+    background-color: rgb(246, 246, 246);
+    font-size:1.1rem;
+    padding: 10px 20px;
 
 }
 .inputBox .username i,.inputBox .email i,.inputBox .password i{
-    font-size: 25px;
+    font-size: 1.3rem;
+    color: var(--primary-color);
     right: 15px;
     top: 50%;
     position: absolute;
     transform: translateY(-50%);
 
 }
-
+.div1 h3{
+    font-size: 1rem;
+    font-family:Arial;
+}
 .div1 button{
     display: block;
-    padding: 10px 30px;
+    padding: 10px 20px;
     color: #fff;
     cursor: pointer;
-    background-color: hsl(211, 100%, 50%);
+    background-color: var(--primary-color);
     border-radius: 10px;
     border: 2px solid #fff;
-    font-weight: 800;
-    font-size: 30px;
-    margin: 20px auto;
+    font-weight: 600;
+    font-size:1.3rem;
+    margin:10px auto;
+
 }
 .icon-box{
     display: flex;
@@ -92,22 +101,19 @@ body{
 }
 .icon-box i{
     font-size: 20px;
-    border: 2px solid #333;
+    background-color: rgb(248, 248, 248);
     padding: 20px 20px;
     cursor: pointer;
     transition: all 0.4s ease;
 }
 .icon-box i:hover{
-    border: none;
-    outline: none;
-    transform: scale(1.1);
-    color: hsl(271, 100%, 44%);
+    color: blue;
 }
 
 /* For the Right Section */
 
 .div2{
-    background-color: hsl(219, 71%, 51%);
+    background-color: var(--primary-color);
     right: 0;
     display: flex;
     align-items: center;
@@ -134,24 +140,25 @@ body{
 }
 .div2 #btn{
     display: block;
-    background-color: hsl(219, 71%, 51%);
+    background-color: var(--primary-color);
     border-radius: 10px;
     border: 2px solid #fff;
-    font-weight: 800;
-    font-size: 30px;
+    font-weight: 600;
+    font-size: 1.3rem;
+
 }
 .div2 button{
-    padding: 10px 30px;
+    padding: 10px 20px;
     color: #fff;
     cursor: pointer;
 }
 .btn2{
     display: block;
-    background-color: hsl(219, 71%, 51%);
+    background-color: var(--primary-color);
     border-radius: 10px;
     border: 2px solid #fff;
-    font-weight: 800;
-    font-size: 30px;
+    font-weight: 600;
+    font-size: 1.3rem;
 
 }
 .btn2,.sech2,.sech1{
@@ -172,6 +179,9 @@ body{
 }
 .toRight{
     transform: translateX(100%);
+    height: 100%;
+    right: 0;
+
 }
 
 .fullwidth{
@@ -245,7 +255,8 @@ body{
     }
     .container .div1{
         width: 100%;
-        height: 100%;
+        height: 85%;
+        top: 0;
     }
     .fullwidth{
         height: 100% !important;
@@ -287,8 +298,18 @@ body{
         }
     }
     .toRight{
-        transform: translateX(0);
+        transform: translate(0,80px);
     }
-    
+
+}
+@media (max-width:450px){
+    .div1 .inputBox div{
+        width: 90%;
+    }
+    .div1 h1{
+        font-size: 2rem;
+    }
+}
+@media (max-width:450px){
 
 }
